--- a/viego-wallet/package.json
+++ b/viego-wallet/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vis.gl/react-google-maps": "^1.6.1",
     "lucide-react": "^0.263.1",
+    "mongoose": "^8.19.2",
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
